plang/testing/logs/false-incorrect/122/program122.p.p
x (C) (j7 FRE Ayu (oj (Ge1Cd) (h99L aPo (HLZfq) (IAK) (vwBR (Y3) (O0) (yvyyK jlJaJ (EF) UNoTg V7AEg))) (DGd) HdwNj)).


c37Y.
f d1y vqHD (ERwB2) (G) :- (hh adM, mN0; z2pqK (ibxm (x Ss6cl (UC)) (Zvu) Nq zfu) (Wkfw) (Az) (AJTK); mEQzV); (tW (KAJIL) (h (pppi2 (OF) (h3aL (eOr2S G) oe (aQV2f ai8rq (p (sjUa7) (iv3 CcplE iB) Xwt AgZY3) (rPq (fG4f n VfDg (rZ7Q Aa)) zwJe U4) cA) (U)) qv9)) (soyS)), b (Oh8), (r3 (MNC) (f daq) (q (u3Z (FMc1) Ogs wER) (ypO8A (rob0J (C64d)) e (UH)) (KptTX) pCe) (F)).


cZZxn (tA7 MRk (L) F9) :- (a w11 V2Ky ELO TAPlp).


vMCG (oxFw (s0b) E nP (D6lj)) :- i SmR; hmg4; trm; dwr d z8ZI9 (CsdHD), ac4Wg (GQo) Hyj5z (AdBB) mk, (g1sk (IW0) swDVy); (hCs4 (oC2 qT)).
w (IO) (r (uM s6A6d)) (OMxq) (HjrV).

r (sc MO0gX i9iq (mlq6) (l QX (dKb7f))) JVATb :- (((td0x))); s (S) (Fp); zCk (iO VUq MgYs) (XqF) (gR0 (v (chJ (UA7) (dsdUR) (ac5 rA (qMCJr) DwY1)) (W0) ZZR)); neOdP c, exK jH t3 (X59lT) (wA4XU XsjGx (wT XVs (KEnNz)) M), sN mL (x KB E (yK6rm REw)) (uGnQ KDrM E ciGM v) (A).
wsq :- ((ovs (pW6c (d (jBJ9) (f) (nUKu) O8kCU)) koo p), dX (pYt1 (oM (xm) (GA)) bMET b) c5Ft (sL (lS82 lQZa l (F)) (AZShh)) PB, (z (Eyi) l); e9S8H).

cc0 :- yaD C z8P2 Nq0.

? ((kj (W1dPa))); ((vVwb (Jr) (wkC BT7Qy (Lg)) (SpFTN) (mCjjq (n (hjm4U (W)) (aoVL pbyo NRGX) (wxD) IC) (qljIF LgE5 i A6 BMSpM) (G7e) yvUTz))); (cOMUs (AD5j8) (GM) (xBCiP) Jr; qwlXv n7FG k9); kBPh; (oEUHr N3K1P).



